Overlap Fix for Coloring
Image Break up to get color to show through right. State coloring for selected tab. Tab Bug Fixes across browsers.

--- a/Assets/scss/components/navigation/_tabs-overlap.scss
+++ b/Assets/scss/components/navigation/_tabs-overlap.scss
@@ -1,17 +1,21 @@
 
 .overlap{ 
-	background-color: color(rebrand-color(#fff,3),20); 
-	background:url('../img/billie-holiday.png') repeat top right,url('../img/bottom-shade.png') repeat-x bottom right,url('../img/top-shade.png') repeat-x right -1px;
+	background-color: color(rebrand-color($black,3),12); 
+	background-image:url('../img/billie-holiday.png'),url('../img/bottom-shade.png'),url('../img/top-shade.png');
+	background-position:top right,bottom right,right -1px;
+	background-repeat:repeat,repeat-x,repeat-x;
 	border-bottom: 2px solid grey(40);
+	margin-bottom:.25rem;
 	.tabs{
 		padding-top:.25em;
-		border-bottom:0;
+		border:0;
 		background:transparent none;
-	li{ 
+	li,.tabs-title{ 
 		border: 2px solid grey(30);
 		border-bottom: 0;
 		border-top-left-radius: 7px;
 		border-top-right-radius: 7px;
+		margin-bottom: 0;
 		&.selected,&.is-active{
 			margin-bottom: -1px;
 			padding-bottom: 3px;
@@ -29,13 +33,6 @@
 	 
 	}
 }
-.with-group-sections .overlap, .paper-page .overlap{ 
-	margin-bottom:1rem; 
-	border-left:0;
-	border-right:0;
-	.tabs{}
-}
-
 /**
 * Tabs Overlap:
 * `.tabs.overlap` -  Overlap gives shallow space to give a small layer effect
