--- a/Assets/scss/components/navigation/_tabs.scss
+++ b/Assets/scss/components/navigation/_tabs.scss
@@ -42,14 +42,14 @@ $tab-lighttext:$global-default-light-text;
 			border-top-left-radius: $global-border-radius * .5;
 			border-top-right-radius: $global-border-radius * .5;
 			display: inline-block;
-			margin:.2em .2em -1px;
+			margin:.2em .2em 0;
 	    @include bp(md){
-	      margin:.25em .25em -1px;
+	      margin:.25em .25em 0;
 	      border-top-left-radius: $global-border-radius * .75;
 	      border-top-right-radius: $global-border-radius * .75;
 	    } 
 	    @include bp(lg){
-	      margin:.3em .3em -1px;
+	      margin:.3em .3em 0;
 	      border-top-left-radius: $global-border-radius;
 	      border-top-right-radius: $global-border-radius;
 	    } 
